--- a/app/components/WeeklyPlan/WeeklyPlan.css
+++ b/app/components/WeeklyPlan/WeeklyPlan.css
@@ -23,3 +23,7 @@
     transform: translateY(0);
     transition: height 200ms ease;
 }
+
+.btn-vegetarian-toggle:hover svg{
+    fill: var(--color-white)
+}
