--- a/app/components/WeeklyPlan/WeeklyPlanDesktop.css
+++ b/app/components/WeeklyPlan/WeeklyPlanDesktop.css
@@ -18,3 +18,17 @@
     justify-content: center;
     align-items: center;
 }
+
+.day-container:hover .days-recipe-title {
+    opacity: 1;
+    transition: opacity 200ms ease;
+}
+
+.days-recipe-title {
+    transition: opacity 200ms ease;
+    opacity: 0;
+}
+
+.current:hover .days-recipe-title {
+    display: none;
+}
