--- a/components/InteractiveWeeklyPlan/InteractiveWeeklyPlan.css
+++ b/components/InteractiveWeeklyPlan/InteractiveWeeklyPlan.css
@@ -1,3 +1,7 @@
+.modal-select-recipe {
+    contain: strict;
+}
+
 .modal-card-selected .card-option {
     border: 1px solid var(--color-primary);
     border-bottom-left-radius: 0;
@@ -22,5 +26,4 @@
     padding: 8px 5px 0 5px;
     border-bottom-left-radius: .5rem;
     border-bottom-right-radius: .5rem;
-    
 }
