--- a/components/InteractiveWeeklyPlan/InteractiveWeeklyPlan.css
+++ b/components/InteractiveWeeklyPlan/InteractiveWeeklyPlan.css
@@ -11,19 +11,30 @@
 .modal-card-selected .card-option::after {
     content: 'receta seleccionada';
     position: absolute;
-    z-index: -1;
-    height: 40px;
+    /* z-index: -1; */
+    height: 35px;
     width: 100%;
     background-color: var(--color-primary);
     color: var(--color-white);
     font-weight: 600;
     font-size: 14px;
     display: flex;
-    justify-items:center;
+    justify-content:center;
     align-items: center;
     bottom: 8px;
     transform: translateY(100%);
-    padding: 8px 5px 0 5px;
+    padding: 0px 5px;
     border-bottom-left-radius: .5rem;
     border-bottom-right-radius: .5rem;
+}
+
+@media screen and (max-width: 400px) {
+    .modal-card-selected .card-option::after  {
+        content: 'selección';
+        text-align: center;
+    }
+}
+
+.carousel__slider--horizontal {
+    overflow: visible !important;
 }
