--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -62,4 +62,5 @@
     text-underline-offset: 8px;
     text-decoration: underline;
     text-decoration-color: var(--color-secondary);
+    text-decoration-thickness: 3px;
 }
